<resources>
    <string name="app_name">DiCaMa Files</string>
    <string name="image_description">Bildbeschreibung</string>
    <string name="ok">OK</string>
    <string name="add_image">Add image</string>
    <string name="edit_bildbeschreibung">Bearbeite Bildbeschreibung</string>
    <string name="marker">Marker</string>
    <string name="set_marker">Markierungen setzen</string>
    <string name="cancel">Cancel</string>
    <string name="create_pdf">PDF erstellen</string>
    <string name="evaluation">Beurteilung</string>
    <string name="note">Notiz</string>
    <string name="desciption">Beschreibung</string>
    <string name="date">Datum</string>
    <string name="type">Modalität</string>
    <string name="placeholder">Platzhalter</string>
    <string name="back">Zurück</string>
    <string name="new_examination">Neue Untersuchung</string>
    <string name="short_description">Kurzbeschreibung</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="storage">Ablageort</string>
    <string name="edit_storage">Bearbeite Ablageort</string>
    <string name="edit_evaluation">Bearbeite Beurteilung</string>
    <string name="edit_note">Bearbeite Notiz</string>
    <string name="share">Teilen</string>
    <string name="delete">Löschen</string>
    <string name="favorites">Favoriten</string>
    <string name="sort_by_examination_time">sortieren nach Untersuchungszeit</string>
    <string name="search">Suchen</string>
    <string name="image">Bild</string>
    <string name="finished">Fertig</string>
    <string name="edit">Bearbeiten</string>
    <string name="hint">Tip</string>
    <string name="include_image">Bild einfügen</string>
    <string name="include_markers">Markierungen einfügen</string>
    <string name="include_description">Beschreibung einfügen</string>
    <string name="unable_to_open_camera">Kamera kann nicht geöffnet werden</string>
    <string name="search_term">Such Text</string>
    <string name="all_images">Alle Bilder</string>
    <string name="choose_the_information_for_sharing">Wählen sie die Informationen aus die geteilt werden sollen</string>
</resources>