<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExaminationEditingActivity"
    android:background="@drawable/background_item_selection">

    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_Beschreibung"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:clickable="true"
            android:hint="@string/short_description"
            android:paddingBottom="4dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_Date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:hint="@string/dd_mm_yyyy"
                android:paddingBottom="4dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="NotSibling" />

            <ImageButton
                android:id="@+id/ee_today_button"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_today" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_Modality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/ee_info_button"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_info" />

        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="12dip"
        app:layout_constraintBottom_toTopOf="@+id/ee_ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verticalLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp">

                    <ImageView
                        android:id="@+id/ee_imageView"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:background="@android:color/black"
                        android:clickable="true"
                        android:contentDescription="@string/image"
                        android:focusable="true"
                        android:scaleType="fitCenter"

                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="8dp">

                            <ImageView
                                android:id="@+id/ee_imageView1"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@android:color/black"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/avatars" />
                        </androidx.cardview.widget.CardView>

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="8dp">

                            <ImageView
                                android:id="@+id/ee_imageView2"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:adjustViewBounds="false"
                                android:background="@android:color/black"
                                android:cropToPadding="false"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/avatars" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/ee_number_image_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp" />

                    <TextView
                        android:id="@+id/ee_image_desciption_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/image_description" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/ee_image_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_bildbeschreibung"
                                 />
                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/ee_storage_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/storage" />

            <TextView
                android:id="@+id/ee_storage_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:hint="@string/edit_storage"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/ee_evaluation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginTop="16dp"
                android:text="@string/evaluation" />

            <TextView
                android:id="@+id/ee_evaluation_textEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:hint="@string/edit_evaluation"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/ee_note_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/note" />

            <TextView
                android:id="@+id/ee_note_textEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:hint="@string/edit_note"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ee_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:clickable="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ee_cancel_button"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ee_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="center"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ee_ok_button"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ee_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_done_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ee_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_backspace_24" />


</androidx.constraintlayout.widget.ConstraintLayout>